# enterprise-data-engineering-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
config/: dev.properties  spark_config.py  spark_dependencies.py
src/common/: config_reader.py  constant.py  logger.py  spark_session.py
src/ingestion/: carts.py  products.py  users.py
src/loader/: bronze_loader.py  gold_loader.py  silver_loader.py
src/pipeline/: carts_pipeline.py  customer_analytics_pipeline.py  products_pipeline.py  users_pipeline.py
src/transformation/gold/: customer_analytics.py
src/transformation/silver/: carts.py  products.py  users.py
tests/: test_ingestion.py
